Add switching between single and multiple choice quizzes The solution checking needs to be reworked (#4)

--- a/_extensions/quarto-forms-teachr/quiz-template.html
+++ b/_extensions/quarto-forms-teachr/quiz-template.html
@@ -18,7 +18,7 @@
       label.textContent = question;
 
       var input_elem = document.createElement("input");
-      input_elem.setAttribute("type", "radio");
+      input_elem.setAttribute("type", "{{QUIZTYPE}}");
       input_elem.setAttribute("class", "quiz-radio");
       input_elem.setAttribute("name", `qforms-quiz-name-{{QUIZCOUNTER}}`);
       input_elem.setAttribute("value", (index+1));
